Feat(Chat & handling Login incasesentivity)  Resolving Chat Errors